# allolib

./: .gitignore  .travis.yml  CMakeLists.txt  run.sh
cmake/: FindFreeImage.cmake  al_files.cmake  app.cmake  find_additional_dependencies.cmake  find_core_dependencies.cmake  oscpack.cmake  portaudio.cmake  rtaudio.cmake  rtmidi.cmake
cmake/single_file/: CMakeLists.txt
cmake_modules/: app.cmake  external.cmake  find_additional_dependencies.cmake  find_core_dependencies.cmake
dependencies/: locating_glew.txt  locating_glfw.txt
empty_project/: CMakeLists.txt  app_config.cmake  main.cpp
include/al/core/io/: al_ControlNav.hpp
include/al/glv/: al_GLV.hpp
nwFiles/: lbap.cpp  lbap.hpp  lbapExample.cpp  lbapTest.cpp  vbap_2809.cpp
src/core/io/: al_WindowGLFW.cpp  minFileSys.hpp
test/: CMakeLists.txt
